templater/tests/snapshots/error__debug_render_report__orphan_else.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x `else` outside of an `if` block
   ,----
 1 | {% else %}
   : ^^^^^^^^^^
   `----
