templater/tests/snapshots/error__debug_render_report__orphan_end.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x orphan `end`
   ,----
 1 | {% end %}
   : ^^^^^^^^^
   `----
