templater/tests/snapshots/error__debug_render_report__stray_delimiter_interp.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x stray delimiter
   ,----
 1 | }}
   : ^^
   `----
