templater/tests/snapshots/error__debug_render_report__stray_delimiter_stmt.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x stray delimiter
   ,----
 1 | %}
   : ^|
   :  `-- remove or escape this delimiter
   `----
