templater/tests/snapshots/error__debug_render_report__trailing_comma_call.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x trailing comma
   ,----
 1 | {{ same(1,) }}
   :          ^
   `----
