templater/tests/snapshots/error__debug_render_report__trailing_comma_list.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x trailing comma
   ,----
 1 | {{ [1,] }}
   :      |
   :      `-- remove the trailing comma
   `----
