templater/tests/snapshots/error__debug_render_report__trailing_dot.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x empty identifier after `.`
   ,----
 1 | {{ x. }}
   :     ^
   `----
