templater/tests/snapshots/error__debug_render_report__type_mismatch_arg.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x expected type string, got integer
   ,----
 1 | {{ exact1(42) }}
   :           ^^
   `----
