templater/tests/snapshots/error__debug_render_report__unclosed_comment.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x unclosed delimiter
   ,----
 1 | {# comment
   : ^^
   `----
