templater/tests/snapshots/error__debug_render_report__unclosed_function.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x unclosed function
   ,----
 1 | {{ same(1 }}
   :        ^
   `----
